third_party/move/tools/move-decompiler/tests/compiler-v2-test/reference-safety/v1-tests/move_combo.exp
module 0x8675309::M {
    struct S has copy, drop {
        f: u64,
        g: u64,
    }
    fun id<T>(r: &T): &T {
        r
    }
    fun id_mut<T>(r: &mut T): &mut T {
        r
    }
    fun t0(cond: bool, _other: &mut S) {
        let _t3;
        let _t2 = S{f: 0,g: 0};
        if (cond) _t3 = &(&_t2).f else _t3 = &(&_t2).g;
        *_t3;
    }
    fun t1(cond: bool, other: &mut S) {
        let _t3;
        if (cond) _t3 = &mut (&mut S{f: 0,g: 0}).f else _t3 = &mut other.f;
        *_t3;
    }
    fun t2(cond: bool, other: &mut S) {
        let _t3;
        if (cond) _t3 = &mut S{f: 0,g: 0} else _t3 = other;
        *_t3;
    }
    fun t3(cond: bool, other: &mut S) {
        let _t3;
        if (cond) _t3 = id_mut<S>(&mut S{f: 0,g: 0}) else _t3 = other;
        *_t3;
    }
    fun t4(cond: bool, _other: &mut S) {
        let _t3 = &(&S{f: 0,g: 0}).f;
        if (!cond) *_t3;
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: expected expression with no value but found `u64`
   ┌─ move_combo.move:35:9
   │
35 │         if (!cond) *_t3;
   │         ^^^^^^^^^^^^^^^
